--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img1.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img1.jpg" alt="Технокряк">
                                 <p class="description-text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                                     Все це дозволить відвідувачу отримати
@@ -81,7 +81,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img2.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img2.jpg" alt="Технокряк">
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -100,7 +100,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img3.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img3.jpg" alt="Технокряк">
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -119,7 +119,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img4.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img4.jpg" alt="Технокряк">
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -138,7 +138,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img5.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img5.jpg" alt="Технокряк">
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -157,7 +157,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img6.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img6.jpg" alt="Технокряк">
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -176,7 +176,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img7.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img7.jpg" alt="Технокряк">
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -195,7 +195,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img8.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img8.jpg" alt="Технокряк">
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -214,7 +214,7 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img src="./images/portfolio/img9.jpg" alt="Технокряк" width="370" height="294">
+                                <img class="portfolio-img" src="./images/portfolio/img9.jpg" alt="Технокряк">
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -236,51 +236,54 @@
     </main>
 
     <footer class="flooter">
-        <div class="container fl-box">
-            <div class="fl-box1">
-                <a class="logo1 link" href="./index.html">Web<span class="logo3">Studio</span></a>
-                <address class="address">м. Київ, пр-т Лесі Українки, 26
-                    <ul class="adress-list">
-                        <li><a class="link flooter-link" href="mailto:spolonchuk@gmail.com">info@devstudio.com</a>
+        <div class="container  fl-box">
+            <div class="fl-box12">
+                <div class="fl-box1">
+                    <a class="logo1 link" href="./index.html">Web<span class="logo3">Studio</span></a>
+                    <address class="address">м. Київ, пр-т Лесі Українки, 26
+                        <ul class="adress-list">
+                            <li><a class="link flooter-link" href="mailto:spolonchuk@gmail.com">info@devstudio.com</a>
+                            </li>
+                            <li class="address-item"><a class="link flooter-link" href="tel:+380961111111">+38 096 111
+                                    11
+                                    11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="fl-box2">
+                    <p class="flooter-title">приєднуйтесь</p>
+                    <ul class="social-flooter-list">
+                        <li class="social-item">
+                            <a href="" class="social-flooter-link">
+                                <svg class="social-flooter-svg" width="20" height="20">
+                                    <use href="./images/svg/sprite.svg#icon-instagram"> </use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="address-item"><a class="link flooter-link" href="tel:+380961111111">+38 096 111 11
-                                11</a>
+                        <li class="social-item">
+                            <a href="" class="social-flooter-link">
+                                <svg class="social-flooter-svg" width="20" height="20">
+                                    <use href="./images/svg/sprite.svg#icon-twitter"> </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-flooter-link">
+                                <svg class="social-flooter-svg" width="20" height="20">
+                                    <use href="./images/svg/sprite.svg#icon-facebook"> </use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-flooter-link">
+                                <svg class="social-flooter-svg" width="20" height="20">
+                                    <use href="./images/svg/sprite.svg#icon-linkedin"> </use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </address>
-            </div>
-            <div class="fl-box2">
-                <p class="flooter-title">приєднуйтесь</p>
-                <ul class="social-flooter-list">
-                    <li class="social-item">
-                        <a href="" class="social-flooter-link">
-                            <svg class="social-flooter-svg" width="20" height="20">
-                                <use href="./images/svg/sprite.svg#icon-instagram"> </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item">
-                        <a href="" class="social-flooter-link">
-                            <svg class="social-flooter-svg" width="20" height="20">
-                                <use href="./images/svg/sprite.svg#icon-twitter"> </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item">
-                        <a href="" class="social-flooter-link">
-                            <svg class="social-flooter-svg" width="20" height="20">
-                                <use href="./images/svg/sprite.svg#icon-facebook"> </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-item">
-                        <a href="" class="social-flooter-link">
-                            <svg class="social-flooter-svg" width="20" height="20">
-                                <use href="./images/svg/sprite.svg#icon-linkedin"> </use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <div class="fl-box3">
                 <p class="flooter-title">Підпишіться на розсилку</p>
