--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             <nav class="navigation">
                 <a class="logo1 link" href="./index.html">Web<span class="logo2">Studio</span></a>
                 <ul class="navigation__main-list navigation__main-list--position">
-                    <li><a class="link navigation__link" href="./index.html">Студія</a></li>
-                    <li><a class="link navigation__link navigation__accent-link" href="./portfolio.html">Портфоліо</a>
-                    </li>
+                    <li><a class="link navigation__link navigation__accent-link" href="./index.html">Студія</a></li>
+                    <li><a class="link navigation__link" href="./portfolio.html">Портфоліо</a></li>
                     <li><a class="link navigation__link" href="./index.html">Контакти</a></li>
                 </ul>
             </nav>
@@ -67,7 +66,8 @@
             </svg>
         </button>
         <ul class="mob-menu_list ">
-            <li class="mob-menu_item"><a class="link mob-menu__link" href="./index.html">Студія</a></li>
+            <li class="mob-menu_item"><a class="link mob-menu__link mob-menu__accent-link"
+                    href="./index.html">Студія</a></li>
             <li class="mob-menu_item"><a class="link mob-menu__link" href="./portfolio.html">Портфоліо</a></li>
             <li class="mob-menu_item"><a class="link mob-menu__link" href="./index.html">Контакти</a></li>
         </ul>
