--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,8 @@
         </button>
         <ul class="mob-menu_list ">
             <li class="mob-menu_item"><a class="link mob-menu__link" href="./index.html">Студія</a></li>
-            <li class="mob-menu_item"><a class="link mob-menu__link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="mob-menu_item"><a class="link mob-menu__link mob-menu__accent-link"
+                    href="./portfolio.html">Портфоліо</a></li>
             <li class="mob-menu_item"><a class="link mob-menu__link" href="./index.html">Контакти</a></li>
         </ul>
         <div class="mob-menu__contact">
@@ -105,7 +106,16 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img1.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img1_lg_1x.jpg 1x,
+                                                       ./images/portfolio/img1_lg_2x.jpg 2x" type="image/jpg">
+                                    <source media="(min-width: 768px)" srcset="./images/portfolio/img1_md_1x.jpg 1x,
+                                                       ./images/portfolio/img1_md_2x.jpg 2x" type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img1_sm_1x.jpg 1x,
+                                                   ./images/portfolio/img1_sm_2x.jpg 2x" type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img1_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <p class="description-text">
                                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
                                     Все це дозволить відвідувачу отримати
@@ -121,7 +131,17 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img2.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img2_lg_1x.jpg 1x,
+                                                            ./images/portfolio/img2_lg_2x.jpg 2x" type="image/jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="./images/portfolio/img2_md_1x.jpg 1x,
+                                                                                        ./images/portfolio/img2_md_2x.jpg 2x" type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img2_sm_1x.jpg 1x,
+                                                            ./images/portfolio/img2_sm_2x.jpg 2x" type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img2_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -140,7 +160,19 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img3.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img3_lg_1x.jpg 1x,
+                                                                         ./images/portfolio/img3_lg_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <source media="(min-width: 768px)" srcset="./images/portfolio/img3_md_1x.jpg 1x,
+                                                                   ./images/portfolio/img3_md_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img3_sm_1x.jpg 1x,
+                                                                 ./images/portfolio/img3_sm_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img3_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -159,7 +191,17 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img4.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img4_lg_1x.jpg 1x,
+                                                                      ./images/portfolio/img4_lg_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <source media="(min-width: 768px)" srcset="./images/portfolio/img4_md_1x.jpg 1x,
+                                                   ./images/portfolio/img4_md_2x.jpg 2x" type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img4_sm_1x.jpg 1x,
+                                                      ./images/portfolio/img4_sm_2x.jpg 2x" type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img4_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -178,7 +220,17 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img5.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img5_lg_1x.jpg 1x,
+                                                                        ./images/portfolio/img5_lg_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <source media="(min-width: 768px)" srcset="./images/portfolio/img5_md_1x.jpg 1x,
+                                                        ./images/portfolio/img5_md_2x.jpg 2x" type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img5_sm_1x.jpg 1x,
+                                                              ./images/portfolio/img5_sm_2x.jpg 2x" type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img5_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -197,7 +249,19 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img6.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img6_lg_1x.jpg 1x,
+                                                                 ./images/portfolio/img6_lg_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <source media="(min-width: 768px)" srcset="./images/portfolio/img6_md_1x.jpg 1x,
+                                                                   ./images/portfolio/img6_md_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img6_sm_1x.jpg 1x,
+                                                                      ./images/portfolio/img6_sm_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img6_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -216,7 +280,17 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img7.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img7_lg_1x.jpg 1x,
+                                                                    ./images/portfolio/img7_lg_2x.jpg 2x"
+                                        type="image/jpg">
+                                    <source media="(min-width: 768px)" srcset="./images/portfolio/img7_md_1x.jpg 1x,
+                                                   ./images/portfolio/img7_md_2x.jpg 2x" type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img7_sm_1x.jpg 1x,
+                                                     ./images/portfolio/img7_sm_2x.jpg 2x" type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img7_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -235,7 +309,16 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img8.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img8_lg_1x.jpg 1x,
+                                                     ./images/portfolio/img8_lg_2x.jpg 2x" type="image/jpg">
+                                    <source media="(min-width: 768px)" srcset="./images/portfolio/img8_md_1x.jpg 1x,
+                                                   ./images/portfolio/img8_md_2x.jpg 2x" type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img8_sm_1x.jpg 1x,
+                                                       ./images/portfolio/img8_sm_2x.jpg 2x" type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img8_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -254,7 +337,16 @@
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="">
                             <div class="portfolio-box">
-                                <img class="portfolio-img" src="./images/portfolio/img9.jpg" alt="Технокряк">
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="./images/portfolio/img9_lg_1x.jpg 1x,
+                                              ./images/portfolio/img9_lg_2x.jpg 2x" type="image/jpg">
+                                    <source media="(min-width: 768px)" srcset="./images/portfolio/img9_md_1x.jpg 1x,
+                                                     ./images/portfolio/img9_md_2x.jpg 2x" type="image/jpg">
+                                    <source media="(max-width: 767px)" srcset="./images/portfolio/img9_sm_1x.jpg 1x,
+                                                      ./images/portfolio/img9_sm_2x.jpg 2x" type="image/jpg">
+                                    <img class="portfolio-img" src="./images/portfolio/img9_sm_1x.jpg" alt="Технокряк"
+                                        width="450" height="294" loading="lazy">
+                                </picture>
                                 <div class="portfolio-description-box">
                                     <p class="description-text">
                                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
