--- a/portfolio.html
+++ b/portfolio.html
@@ -116,11 +116,13 @@
                                     <img class="portfolio-img" src="./images/portfolio/img1_sm_1x.jpg" alt="Технокряк"
                                         width="450" height="294" loading="lazy">
                                 </picture>
-                                <p class="description-text">
-                                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                                    Все це дозволить відвідувачу отримати
-                                    вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                <div class="portfolio-description-box">
+                                    <p class="description-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                                        Все це дозволить відвідувачу отримати
+                                        вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
                             </div>
                             <div class="portfolio-link-box">
                                 <h2 class="portfolio-title">Технокряк</h2>
