--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team-list">
-                    <li class="adv-item team-item">
+                    <li class="team-item">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="./images/team/member1_lg_1x.jpg 1x,
                             ./images/team/member1_lg_2x.jpg 2x" type="image/jpg">
@@ -291,7 +291,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="adv-item team-item">
+                    <li class="team-item">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="./images/team/member2_lg_1x.jpg 1x,
                                ./images/team/member2_lg_2x.jpg 2x" type="image/jpg">
@@ -337,7 +337,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="adv-item team-item">
+                    <li class="team-item">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="./images/team/member3_lg_1x.jpg 1x,
                                 ./images/team/member3_lg_2x.jpg 2x" type="image/jpg">
@@ -383,7 +383,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="adv-item team-item">
+                    <li class="team-item">
                         <picture>
                             <source media="(min-width: 1200px)" srcset="./images/team/member4_lg_1x.jpg 1x,
                                                         ./images/team/member4_lg_2x.jpg 2x" type="image/jpg">
